@@ -4,4 +4,10 @@ ifdstreambuf.yo
 milter.yo
 ofdstreambuf.yo
 
+./sharedmutex
+./sharedsegment
+./isharedstream
+./osharedstream
+./sharedmemory
+./sharedpos
 
