@@ -1,0 +1,4 @@
+inline int SharedBlock::id() const
+{
+    return d_id;
+}
