@@ -1,0 +1,4 @@
+inline void SharedBlock::lock()
+{
+    d_mutex.lock();
+}
