@@ -1,0 +1,4 @@
+inline void SharedBlock::setID(int id)
+{
+    d_id = id;
+}
