@@ -19,25 +19,10 @@ class SharedBlock
         void setID(int id);
 };
 
-inline int SharedBlock::id() const
-{
-    return d_id;
-}
-
-inline void SharedBlock::setID(int id)
-{
-    d_id = id;
-}
-
-inline void SharedBlock::lock()
-{
-    d_mutex.lock();
-}
-
-inline void SharedBlock::unlock()
-{
-    d_mutex.unlock();
-}
+#include "id.f"
+#include "setid.f"
+#include "lock.f"
+#include "unlock.f"
 
 } // FBB        
 #endif
