@@ -1,0 +1,4 @@
+inline void SharedBlock::unlock()
+{
+    d_mutex.unlock();
+}
