@@ -1,0 +1,5 @@
+inline void SharedStream::clear()
+{
+    std::istream::clear();
+    std::ostream::clear();
+}
