@@ -43,11 +43,7 @@ struct SharedStream: private SharedStreambuf,
 
 };
 
-inline void SharedStream::clear()
-{
-    std::istream::clear();
-    std::ostream::clear();
-}
+#include "clear.f"
 
 } // FBB        
 #endif
