@@ -1,0 +1,5 @@
+inline void SharedStreambuf::clear()
+{
+    d_memory.clear();
+}
+
