@@ -1,0 +1,4 @@
+inline int SharedStreambuf::id() const
+{
+    return d_memory.id();
+}
