@@ -1,0 +1,4 @@
+inline void SharedStreambuf::kill()
+{
+    d_memory.kill();
+}
