@@ -1,0 +1,4 @@
+inline void SharedStreambuf::memInfo(std::ostream &out) const
+{
+    out << d_memory;
+}
