@@ -1,0 +1,4 @@
+inline void SharedStreambuf::remove()
+{
+    d_memory.remove();
+}
