@@ -1,0 +1,4 @@
+inline void SharedStreambuf::setMemory(SharedMemory &&tmp)
+{
+    d_memory = std::move(tmp);
+}
