@@ -1,0 +1,5 @@
+inline void SharedStreambuf::setOpenMode(std::ios::openmode openMode)
+{
+    d_openMode = openMode;
+    d_currentMode = openMode;
+}
