@@ -1,6 +1,4 @@
 #include "sharedstreambuf"
 
-#include <iostream>         // TEMPO
-
 using namespace std;
 using namespace FBB;
