@@ -1,4 +1,8 @@
-WIP
+bobcat (3.18.00)
+
+  * Added several new classes handling shared memory: ISharedStream,
+    OSharedStream, SharedBlock, SharedMemory, SharedMutex, SharedPos,
+    SharedSegment, SharedStream, and SharedStreambuf
 
   * Moved, where possible, nested struct/class  definitions not required in
     the public interface to the internal headers.
